Fix spacing in small UserCard

--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -119,7 +119,7 @@ section.user-card {
   .user {
     display: flex;
     align-items: center;
-    gap: hrs 2rem;
+    gap: 2rem;
   }
 
   .options {
